detailled list of changes, please see ChangeLog.

2.12 (UNRELEASED)
-----------------
Improvements:
 * recoverable_problem: Can take the PID as an argument.
 * Add data/whoopsie-upload-all: Process all pending crashes and mark them for
   whoopsie upload, but do not upload them to any other crash database. Wait
   until whoopsie is done uploading.

Bug fixes:
 * launchpad.py: Show the Python major version in the error message about
   missing launchpadlib.
 * ui.py: Check if options for updating and reporting a new bug get used
   together, and give a proper error message in this case. (LP: #1071905)
 * apport: Fix "Exectuable" typo, leading to reports not being synced on
   upstart crashes. Thanks James Hunt. (LP: #1203744)
 * Rename apport-gtk-mime.desktop to apport-gtk.desktop and drop the
   old apport-gtk.desktop that wasn't even being installed. With that, the
   window will be shown as "Report a problem..." instead of "Apport-gtk" in
   GNOME shell and other DEs. Thanks Jeremy Bicha. (LP: #1207496)
 * report.py, add_gdb_info(): Fix crash if gdb cannot load the symbol map.
   (LP: #1171484)
 * apport-retrace: Fix crash when using --sandbox without --cache.
   (LP: #1197034)
 * Fix error message when PID is inaccessible. (LP: #1204718)

2.11 (2013-07-17)
-----------------
Improvements:
 * data/apport-noui: A noninteractive frontend for automatic error
   reporting. apport-bug will use this if the /etc/apport/autoreport flag
   file exists.
 * hookutils.py, attach_upstart_logs(): Also attach
   ~/.cache/upstart/application-<desktopname>.log for any *.desktop file
   shipped by a package.

Bug fixes:
 * hookutils.py, attach_conffiles(): Fix check for inaccessible or modified
   conffiles. (LP: #1192899)

2.10.2 (2013-05-22)
-------------------
Bug fixes:
 * Resolve symlinks in file references in Python crash signatures.
   (LP: #1179979)
 * Fix endless loop of EOFErrors with broken core dumps. (LP: #1168849)