@@ -13,4 +13,17 @@ class T(unittest.TestCase):
         self.assertRaises(ValueError, apport.packaging.get_version, p)
         self.assertTrue(apport.packaging.is_distro_package(p))
 
+    def test_get_os_version(self):
+        '''get_os_version()'''
+
+        (n, v) = apport.packaging.get_os_version()
+        self.assertEqual(type(n), str)
+        self.assertEqual(type(v), str)
+        self.assertGreater(len(n), 1)
+        self.assertGreater(len(v), 0)
+
+        # second one uses caching, should be identical
+        (n2, v2) = apport.packaging.get_os_version()
+        self.assertEqual((n, v), (n2, v2))
+
 unittest.main()
